fix font visibilty for hourly and daily forecast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -314,7 +314,6 @@ body {
 
 h4 {
     display: inline-block;
-    background: rgba(255,255,255,0.65);
     border-radius: 0;
     box-shadow: 0 2px 8px rgba(0,0,0,0.10);
     padding: 0.35em 1.2em;
